Unused code removed